# todoke

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  Makefile.toml  OPENCODE.md  README.md  apm.lock.yaml  apm.yml  build.out  build.rs  clippy.toml  opencode.json  renovate.json  renri.toml  rustfmt.toml  test.out
.agents/skills/renri/: SKILL.md
.gemini/: settings.json
.github/workflows/: apm-bump.yml  auto-tag.yml  ci.yml  claude-review.yml  claude.yml  kata-apply.yml  release.yml
.kata/: applied.toml  vars.toml
assets/: default.toml
examples/: smoke.rs
src/: backends.rs  cli.rs  config.rs  console_attach.rs  dispatcher.rs  editors.rs  input.rs  main.rs  matcher.rs  platform.rs  registry.rs  style.rs  template.rs  updater.rs
src/backends/: exec.rs  neovim.rs
src/cli/: config.rs
src/editors/: generic.rs  neovim.rs
tests/: cli.rs
