[package]
name = "edtr"
version = "0.1.9"
edition = "2024"
rust-version = "1.85"
description = "An editor router/transfer tool that dispatches files to the right editor based on rules."
authors = ["yukimemi"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yukimemi/edtr"
homepage = "https://github.com/yukimemi/edtr"
documentation = "https://docs.rs/edtr"
keywords = ["editor", "cli", "neovim", "router", "dispatcher"]
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"
include = [
    "src/**/*.rs",
    "assets/default.toml",
    "assets/icon.ico",
    "assets/icon.png",
    "assets/icon.svg",
    "assets/logo.svg",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[build-dependencies]
winresource = "0.1.31"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4.6.2"
directories = "5"
nvim-rs = { version = "0.9", features = ["use_tokio"] }
owo-colors = "4"
regex = "1"
serde = { version = "1", features = ["derive"] }
supports-color = "3"
tera = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
