[package]
name = "todoke"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A rule-driven file dispatcher: hands incoming file paths to the right editor or script based on TOML-defined rules."
authors = ["yukimemi"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yukimemi/todoke"
homepage = "https://github.com/yukimemi/todoke"
documentation = "https://docs.rs/todoke"
keywords = ["dispatcher", "router", "cli", "neovim", "editor"]
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"
include = [
    "src/**/*.rs",
    "assets/default.toml",
    "assets/icon.ico",
    "assets/icon.png",
    "assets/icon.svg",
    "assets/logo.svg",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[build-dependencies]
winresource = "0.1.31"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6.2"
directories = "5"
nvim-rs = { version = "0.9.2", features = ["use_tokio"] }
owo-colors = "4"
regex = "1"
serde = { version = "1", features = ["derive"] }
supports-color = "3"
tera = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
