[package]
name = "todoke"
version = "2.1.0"
edition = "2024"
rust-version = "1.85"
description = "A rule-driven file and URL dispatcher: hands incoming paths (or URLs) to the right handler based on TOML-defined rules."
authors = ["yukimemi"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yukimemi/todoke"
homepage = "https://github.com/yukimemi/todoke"
documentation = "https://docs.rs/todoke"
keywords = ["dispatcher", "router", "cli", "neovim", "editor"]
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"
include = [
    "src/**/*.rs",
    "assets/default.toml",
    "assets/icon.ico",
    "assets/icon.png",
    "assets/icon.svg",
    "assets/logo.svg",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[build-dependencies]
winresource = "0.1.31"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6.2"
directories = "6.0.0"
nvim-rs = { version = "0.9.2", features = ["use_tokio"] }
owo-colors = "4.3.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
shlex = "1.3"
supports-color = "3.0.2"
tera = "1.20.1"
url = "2.5.8"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true
